[gd_scene load_steps=13 format=3 uid="uid://cr8m852vu74l8"]

[ext_resource type="Script" uid="uid://cbgp61ye6nr1j" path="res://scripts/Menus/pause_menu.gd" id="1_ccwpd"]
[ext_resource type="FontFile" uid="uid://bk4s3llv2swwr" path="res://assets/General/MoonlitFlow-Regular.ttf" id="2_smx8u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ees4b"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dc6e"]
bg_color = Color(0, 0, 0, 0.31372547)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccwpd"]
bg_color = Color(0.8745098, 0.8745098, 0.8745098, 1)
border_width_left = 10
border_width_top = 5
border_width_right = 10
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(4.225, 4.225)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smx8u"]
bg_color = Color(0.6337563, 0.6337571, 0.63375634, 1)
border_width_left = 10
border_width_top = 5
border_width_right = 10
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(4.225, 4.225)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6uta"]
bg_color = Color(0.8745098, 0.8745098, 0.8745098, 0.26666668)
border_width_left = 10
border_width_top = 5
border_width_right = 10
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(4.225, 4.225)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ees4b"]

[sub_resource type="Animation" id="Animation_2dc6e"]
resource_name = "Background_Fade_In"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.3137255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xk6av"]
resource_name = "Background_Fade_Out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.3137255), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_283su"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12em7"]
_data = {
&"Menu_Fade_In": SubResource("Animation_2dc6e"),
&"Menu_Fade_Out": SubResource("Animation_xk6av"),
&"RESET": SubResource("Animation_283su")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccwpd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ees4b")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.5
offset_top = -227.49998
offset_right = 174.5
offset_bottom = 227.49998
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2dc6e")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_smx8u")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_ccwpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h6uta")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ees4b")
text = "Resume"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_smx8u")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_ccwpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h6uta")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ees4b")
text = "Options"

[node name="Main Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_smx8u")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_ccwpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h6uta")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ees4b")
text = "Main Menu"

[node name="Exit Game" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_smx8u")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_ccwpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smx8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_h6uta")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ees4b")
text = "Exit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_12em7")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit Game" to="." method="_on_exit_game_pressed"]
